# agentic-ai-journey

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt
Prompt Testing/: harness.py  main.py
docs/: Vamsi_Agentic_AI_Mastery_Roadmap.html  roadmap.md  vector_stores_comparison.md
experiments/: analysis.ipynb  analyze_similarity.py  create_notebook.py  failure_analysis.md  generate_charts.py  generate_plots.py  react_agent.py  run_benchmark.py  run_integration_tests.py  smoke_test_rag.py  verify_faiss.py  verify_rag.py  verify_semantic_search.py  verify_vector_store.py  week8_rag_benchmark.py
experiments/nanogpt/: main.py
experiments/prompt_testing/: README.md  harness.py  main.py  test_async_client.py
nanoGPT/: nanogpt.py
projects/task_scheduler_task1/: executor.py  graph.py  scheduler.py  test_scheduler.py
projects/task_scheduler_task2/: executor.py  graph.py  scheduler.py  test_scheduler.py
projects/task_scheduler_task3/: executor.py  scheduler.py  test_scheduler.py
prompts/: concept_explanations.yaml
requirements/: base.txt  ml.txt
src/core/: __init__.py  client.py  config.py  database.py
src/core/agent/: react.py
src/core/llm/: README.md  __init__.py  base.py  chat.py  claude.py  openai.py  tool_client.md  tools.py  tracker.py
src/core/retrieval/: chunker.py  faiss_store.py  (+3 more)
src/telemetry/: __init__.py  logger.py
tests/: conftest.py  test_chunker.py  test_faiss_store.py  test_file_tools.py  test_llm_client.py  test_rag_pipeline.py  test_react_agent.py  test_similarity.py  test_tool_loop.py  test_vector_store.py
